# reachy_mini

./: CMakeLists.txt  package.xml
config/: config_paras.yaml  download_face_gesture_models.sh  yolov5-face.yaml  yolov5_gesture.yaml
simulation/: CMakeLists.txt  control_client.cc  reachy_sim.proto
src/: face_tracker.c  gesture_tracker.c  voice_bot.cpp
src/kinematics/include/: kinematics_params.h  motion_api.h  reachy_kinematics.h
src/kinematics/src/: motion_api.c  reachy_kinematics.c
src/kinematics/test/: test_api.c  test_motion.c
src/media/: config_parser.cpp  config_parser.hpp  device_detect.cpp  device_detect.hpp
src/motor_ctl/: coordinate_processing.md  coordinate_to_motion.c  coordinate_to_motion.h  motor_controller.cpp  motor_controller.h
src/talent_show/: dance_interface.c  dance_interface.h  dance_player.c  dance_player.h  test_dance.c
src/talent_show/audio/: audio_player.c  audio_player.h
src/tracker_generic/: tracker_app_helper.c  tracker_app_helper.h  tracker_common.h  tracker_manager.c  tracker_manager.h  tracker_utils.c  tracker_utils.h
src/vision/: vision_wrapper.cpp  vision_wrapper.h
src/voice/: DESIGN.md  engine_init.cpp  mcp_helper.cpp  text_buffer.cpp  voice_common.cpp  voice_ctl.c  voice_ctl.h  voice_pipeline.cpp
src/voice/configs/: mcp_robot.json
src/voice/include/: engine_init.hpp  mcp_action_provider.hpp  mcp_helper.hpp  text_buffer.hpp  voice_common.hpp  voice_pipeline.hpp
src/voice/services/robot_motion/: http_server.py
src/voice/src/: mcp_action_provider.cpp
